#38 Fix grid carousel on mobile safari

--- a/blocks/v2-images-grid/v2-images-grid.css
+++ b/blocks/v2-images-grid/v2-images-grid.css
@@ -76,6 +76,7 @@
   position: relative;
   height: auto;
   justify-content: flex-end;
+  max-width: 100vw;
 }
 
 .v2-images-grid__carousel-items-list,
@@ -101,6 +102,7 @@
   gap: 10px;
   padding: 20px;
   background: var(--c-primary-white);
+  width: 100%;
 }
 
 .v2-images-grid__carousel-item,
